--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -188,6 +188,9 @@ jobs:
           SERVICE="${{ matrix.service }}"
           COMMIT_MSG="🚀 Update $SERVICE image to ${{ matrix.service }}-${{ github.sha }}"
           
+          # Pull latest changes to avoid conflicts
+          git pull origin gitops
+          
           # Stage changes
           git add "src/$SERVICE/chart/values.yaml"
           
@@ -197,7 +200,17 @@ jobs:
           else
             echo "📤 Committing and pushing changes for $SERVICE..."
             git commit -m "$COMMIT_MSG"
-            git push
+            
+            # Retry push with pull in case of conflicts
+            for i in {1..3}; do
+              if git push; then
+                echo "✅ Successfully pushed $SERVICE chart update"
+                break
+              else
+                echo "⚠️ Push failed, retrying... (attempt $i/3)"
+                git pull --rebase origin gitops
+              fi
+            done
             echo "✅ Successfully updated $SERVICE Helm chart"
           fi
 
