🔧 Update ArgoCD to track gitops branch
- Change targetRevision from main to gitops for all applications
- ArgoCD will now sync from gitops branch where CI/CD updates charts
- Enables real-time deployment of CI/CD built images

--- a/argocd/applications/retail-store-cart.yaml
+++ b/argocd/applications/retail-store-cart.yaml
@@ -9,7 +9,7 @@ spec:
   project: retail-store
   source: 
     repoURL: https://github.com/sameer59-saks/ecommerce-retail-app.git
-    targetRevision: main
+    targetRevision: gitops
     path: src/cart/chart
     helm:
       valueFiles:
