🔧 Fix ArgoCD timeout - Update all Helm charts to use ECR images
- Update all service images to point to our ECR repository
- Use latest built image tags (7f55821 commit)
- Fix ArgoCD 'failed to generate manifest' timeout errors
- All services now use: 463470973994.dkr.ecr.us-west-2.amazonaws.com/ecommerce-store

This should resolve the Helm template timeout issues in ArgoCD.

--- a/src/orders/chart/values.yaml
+++ b/src/orders/chart/values.yaml
@@ -4,9 +4,9 @@
 
 replicaCount: 1
 image:
-  repository: public.ecr.aws/aws-containers/retail-store-sample-orders
+  repository: 463470973994.dkr.ecr.us-west-2.amazonaws.com/ecommerce-store
   pullPolicy: Always
-  tag: "1.2.2"
+  tag: "orders-7f55821"
 imagePullSecrets:
   - name: regcred
 nameOverride: ""
