--- a/src/checkout/chart/values.yaml
+++ b/src/checkout/chart/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 image:
   repository: 463470973994.dkr.ecr.us-west-2.amazonaws.com/ecommerce-store
   pullPolicy: Always
-  tag: "checkout-7f55821"
+  tag: "checkout-c2642818d798ef64894fe91733f268e1cc0a4f56"
 imagePullSecrets:
   - name: regcred
 nameOverride: ''
