--- a/src/ui/chart/values.yaml
+++ b/src/ui/chart/values.yaml
@@ -6,9 +6,9 @@ replicaCount: 1
 image:
   repository: 463470973994.dkr.ecr.us-west-2.amazonaws.com/ecommerce-store
   pullPolicy: Always
-  tag: "ui-c2642818d798ef64894fe91733f268e1cc0a4f56"
-imagePullSecrets:
-  - name: regcred
+  tag: "ui-latest"
+# imagePullSecrets:
+#   - name: regcred
 nameOverride: ""
 fullnameOverride: ""
 serviceAccount:
